[package]

name = "hello_world"
version = "0.1.0"
authors = ["furuhama yusuke <yuuuuusuke0210@gmail.com>"]
description = "My trial of `The Rust Programming Language - second edition`."
license = "MIT"

[dependencies]

num = "0.1"
rand = "0.4"

[profile.dev]

# opt-level can be from 0 to 3
opt-level = 0

[profile.release]

opt-level = 3

[workspace]
